Fix language selection
